Fix for assert crash in AXObjectCache::visiblePositionForTextMarkerData. https://bugs.webkit.org/show_bug.cgi?id=225303 <rdar://problem/77453921>

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/mac/pseudo-element-text-markers.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::visiblePositionForTextMarkerData):
Added check for Node::isPseudoElement to avoid hitting the assertion during the creation of a Position.

LayoutTests:

* accessibility/mac/pseudo-element-text-markers-expected.txt: Added.
* accessibility/mac/pseudo-element-text-markers.html: Added.


Canonical link: https://commits.webkit.org/237550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277286 268f45cc-cd09-0410-ab3c-d52691b4dbfc